# swanson-lang

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL
docs/: Doxyfile.in  bytecode.rst  conf.py  index.rst
include/lagavulin/: block.h  checkers.h  continuation.h  engine.h  stack.h
include/swanson/: ast.h  checkers.h  ds.h  engine.h  helpers.h  metamodel.h  prelude.h  s0.h  state.h  swanson0.h
src/: CMakeLists.txt  liblagavulin.pc.in  libswanson.pc.in
src/liblagavulin/: block.c  blocks.c  continuations.c  engine.c  expression.c  stack.c  stacks.c
src/libswanson/: ast.c  basic-blocks.c  c-function.c  evaluate.c  expression.c  macro.c  old-prelude.c  old-s0-parser.c  old-scope.c  prelude.c  print-type.c  s0-evaluate.c  s0-instructions.c  s0-parser.c  s0-parser.c.rl  scope.c  sllist.c  state.c  string.c  type-satisfies.c  types.c  values.c
src/libswanson/prelude/: bool.c.in  bool.h  metamodel.c.in  string.c.in  string.h
tests/: CMakeLists.txt  helpers.h  run-test  s0-evaluate.c  simple-speed-test.c  test-blocks.c  test-continuations.c  test-engine.c  test-metamodel.c  test-s0-parser.c  test-scopes.c  test-types.c  train  type-satisfies.c
tests/evaluate/block-00/: in
tests/evaluate/block-01/: out
tests/evaluate/function-00/: in
tests/evaluate/function-02/: command  in
tests/evaluate/function-03/: in
tests/evaluate/if-00/: in
tests/evaluate/if-01/: in  out
tests/evaluate/interface-00/: in
tests/evaluate/interface-01/: in
tests/evaluate/interface-02/: in
tests/evaluate/interface-03/: in  out
tests/evaluate/literal-00/: in  out
tests/evaluate/literal-bad-00/: in
tests/evaluate/macro-00/: in  out
tests/evaluate/macro-01/: in
tests/evaluate/macro-02/: in  out
tests/evaluate/macro-03/: in  out
tests/evaluate/macro-04/: in  out
tests/evaluate/macro-05/: in  out
tests/evaluate/macro-bad-00/: err  in
tests/evaluate/macro-bad-params-00/: err  in
tests/evaluate/macro-bad-results-00/: err  in
tests/evaluate/method-call-01/: in
tests/evaluate/method-call-direct-self-01/: in
tests/evaluate/object-00/: in  out
tests/evaluate/object-01/: in  out
tests/evaluate/recursive-bad-00/: in
tests/evaluate/static-string-constant-01/: in
tests/evaluate/tany-00/: in  out
tests/evaluate/tblock-00/: in  out
tests/evaluate/tblock-01/: in
tests/evaluate/tclass-00/: in  out
tests/evaluate/tclass-01/: in  out
tests/evaluate/tclass-02/: in  out
tests/evaluate/tclass-03/: in
tests/evaluate/tclass-04/: in
tests/evaluate/tclass-05/: in  out
tests/evaluate/tclass-06/: in
tests/evaluate/tclass-bad-00/: err  in
tests/evaluate/tfunction-00/: in  out
tests/evaluate/tfunction-01/: in  out
tests/evaluate/tfunction-02/: in  out
tests/evaluate/tfunction-03/: in  out
tests/evaluate/tinterface-00/: in  out
tests/evaluate/tinterface-01/: in  out
tests/evaluate/tinterface-02/: in  out
tests/evaluate/tinterface-03/: in
tests/evaluate/tinterface-04/: in  out
tests/evaluate/tliteral-00/: in  out
tests/evaluate/tlocation-00/: in  out
tests/evaluate/tlocation-01/: in  out
tests/evaluate/tproduct-00/: in  out
tests/evaluate/tproduct-01/: in  out
tests/evaluate/tproduct-02/: in  out
tests/evaluate/tproduct-03/: in  out
tests/evaluate/trecursive-00/: in
tests/evaluate/trecursive-bad-00/: err
tests/evaluate/ttype-00/: in  out
tests/evaluate/tuple-00/: in
tests/evaluate/tuple-01/: in  out
tests/evaluate/tuple-02/: in  out
tests/evaluate/tuple-bad-00/: err  in
tests/evaluate/tuple-bad-01/: err  in
tests/type-satisfies/tblock-00/: in  out
tests/type-satisfies/tclass-00/: in  out
tests/type-satisfies/tclass-01/: in  out
tests/type-satisfies/tclass-bad-00/: in  out
tests/type-satisfies/tfunction-00/: in  out
tests/type-satisfies/tfunction-01/: in  out
tests/type-satisfies/tfunction-bad-00/: in  out
tests/type-satisfies/tinterface-00/: in  out
tests/type-satisfies/tinterface-01/: in  out
tests/type-satisfies/tinterface-02/: in  out
tests/type-satisfies/tinterface-03/: in  out
tests/type-satisfies/tinterface-04/: in  out
tests/type-satisfies/tinterface-bad-00/: in  out
tests/type-satisfies/tinterface-bad-01/: in  out
tests/type-satisfies/tliteral-00/: command  in
tests/type-satisfies/tlocation-00/: in  out
tests/type-satisfies/tproduct-00/: in  out
tests/type-satisfies/tproduct-01/: in  out
tests/type-satisfies/tproduct-02/: in  out
tests/type-satisfies/ttype-00/: in  out
